    peer/peer.go, recon.go, responses.go, worker.go:
    - Refactored recon peer, key status information from loading keys.
      Insert & remove recon ptree digests on key insert/update.
  * hkp_types.go, pgp.go, server.go, worker.go:
    - Implement /pks/hashquery to support SKS recovery & catchup.
      LP: #1197618
    - Added sks-hashquery utility to determine protocol.

  [ Evan Broder ]
  * Makefile, mgo/client.go, mgo/worker.go:
    - Add support for subkey fingerprint query.
    - Use a symlink instead of rsync to satisfy build-deps.

 -- Casey Marshall <casey.marshall@gmail.com>  Sun, 26 May 2013 02:53:55 -0500

hockeypuck (0.9) precise; urgency=low

  [ Casey Marshall ]
  * hkp_types.go, mgo/worker.go, responses.go, server.go,
    status_types.go, worker.go:
    - Added op=stats&options=json response to support spiders.
      LP: #1105592
  * mgo/worker.go, pgp.go, worker.go:
    - Split UID keywords into letter/digit tokens for search.
      LP: #1108416
    - Using $all on search terms in mongo query.
  * scripts/fix-keywords.js:
    - Add script to repair uid keywords in existing Hockeypuck.
  * pgp_types.go, responses.go:
    - Display uat:::: placeholder in machine readable output.
      LP: #1104703
    - Removed debug print statement.
    - Uppercased fingerprint in machine readable output.
  * cmd/hockeypuck-mgo/main.go, mgo/client.go, mgo/keystats.go,
    mgo/pks.go, mgo/worker.go, pgp.go, pgp_types.go, responses.go,
    strings.go:
    - Several MongoDB improvements:
      - Leverage reversed fingerprint for long, short keyid lookup
        with regex indexed query, removed indexed on these.
        LP: #1128565
      - Replace map-reduce generated stats with time-bucket
        increments on load. LP: #1128611
    - Remove invalid UTF-8 characters from uid strings.
    - Reversed issuer key ID in signature for faster lookups
      (anchored regex for mongo, prefixed LIKE for RDBMS).
  * instroot/var/lib/hockeypuck/www/templates/pks/index.tmpl,